# comfyui-stability-ai-api

./: .gitignore  README.md  __init__.py  api_client.py  config.ini  config_manager.py  pyproject.toml  requirements.txt  stability_nodes.py
examples/: workflow_stability-creative-upscaler.json  workflow_stability-image-editor_erase.json  workflow_stability-image-editor_inpaint.json  workflow_stability-image-editor_outpaint.json  workflow_stability-image-editor_search-and-recolor.json  workflow_stability-image-editor_search-and-replace.json  workflow_stability-image-to-video.json  workflow_stability-sketch-control.json  workflow_stability-structure-control.json  workflow_stability-style-control.json  workflow_stability-ultra-image-generation_i2i.json  workflow_stability-ultra-image-generation_t2i.json
js/: preview_3d_model.js  save_3d_model.js
nodes/: preview_3d_model.py  save_3d_model.py  stability_base_node.py  stability_control_sketch.py  stability_control_structure.py  stability_control_style.py  stability_edit.py  stability_fast_3d.py  stability_image_core.py  stability_image_sd3.py  stability_image_to_video.py  stability_image_ultra.py  stability_point_aware_3d.py  stability_upscale_conservative.py  stability_upscale_creative.py  stability_upscale_fast.py
