[project]
name = "comfyui-stability-ai-api"
description = "A collection of custom nodes for using the Stability AI API in ComfyUI."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["requests==2.32.3", "configparser==7.1.0", "numpy==1.24.3", "torch==2.1.1+cu121"]

[project.urls]
Repository = "https://github.com/yhayano-ponotech/comfyui-stability-ai-api"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "yas-ponotech"
DisplayName = "ComfyUI-Stability-AI-API"
Icon = ""